WeaponSlider fix
Changed vertical slider to use MUI slider. Overhauled positioning and css. Made a longer vertical slider for mobile, that is hidden by default

--- a/src/styles/WeaponSelection.css
+++ b/src/styles/WeaponSelection.css
@@ -41,32 +41,23 @@
 
 .weapon-selection{
   position: absolute;
-  top: 60%;
-  left: 23%;
-  width: 200px;
-  height: 200px;
+  top: 55%;
+  left: 22.5%;
+  width: 15%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 20px; 
-  margin-top: 20px; 
+  gap: 8px;
 }
 
 .weapon-choice{
   font-size: 40px;
   text-align: center;
-  position: absolute;
-  top: -20%;
-  left: 55%;
-  transform: translateX(-50%);
 }
 
 .weapon-box{
-  height: 104px;
-  width: 104px;
-  position: absolute;
-  top: 20%;
-  left: 31%;
+  margin-top: 20px;
   z-index: 4;
 }
 
@@ -77,19 +68,10 @@
   border: 2px solid #999;
 }
 
-.label-prefix{
-  width: 150px;
-  font-size: 20px;
-  position: absolute;
-  left: -70%;
-  top: 100%;
-}
-
 .weapon-sig {
-  font-size: 24px;
+  font-size: 30px;
   width: 200px;
   text-align: center;
-  position: absolute;
   left: -40%;
   background-size: 200% auto;
   -webkit-background-clip: text;
